--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1> this works!</h1>
     <?php
-    echo "hi";
+    echo saldjklsajdlkasnl;
     ?>
     <script src = "index.js"></script>
   </body>
